issues with bullet points not showing up in crome

--- a/scss/custom/do.scss
+++ b/scss/custom/do.scss
@@ -64,12 +64,11 @@ $include-html-classes: false;
 
 				ul{
 					list-style: disc;
-					margin-left: 13px;
+					margin-left: 18px;
 					width: 100%;
 
 					li{
 						float: left;
-						list-style-position: inside;
 						width: 83%;
 					}
 
